openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: middle-school-math-api
  labels:
    app.kubernetes.io/name: middle-school-math-api
spec:
  to:
    kind: Service
    name: middle-school-math-api
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
